--- a/mc-template.html
+++ b/mc-template.html
@@ -13,6 +13,7 @@
 <h2><a href="<?= data[row][5]; ?>"><?= data[row][1]; ?></a>, from <?= data[row][0]; ?></h2>
 <p><em><?= data[row][6]; ?></em></p>
 <p><?= data[row][8]; ?>. <?= data[row][9]; ?>. <?= data[row][10]; ?> access.</p>
+<hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
 <? } ?>
     </textarea>
     <? } else { ?>
