--- a/mailchimp.html
+++ b/mailchimp.html
@@ -4,7 +4,7 @@
     <base target="_top">
   </head>
   <body>
-    <? var data = getData(); ?>
+    <? var data = LibMailchimpHTML.getData('All Programs!A2:K31', 4); ?>
     <? if (Array.isArray(data) && data.length) { ?>
     <p>Copy the code below into the code section of a text block in the
     MailChimp editor:</p>
@@ -13,6 +13,7 @@
 <h2><a href="<?= data[row][5]; ?>"><?= data[row][1]; ?></a>, from <?= data[row][0]; ?></h2>
 <p><em><?= data[row][6]; ?></em></p>
 <p><?= data[row][8]; ?>. <?= data[row][9]; ?>. <?= data[row][10]; ?> access.</p>
+<hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
 <? } ?>
     </textarea>
     <? } else { ?>
