--- a/tweets.html
+++ b/tweets.html
@@ -4,7 +4,7 @@
     <base target="_top">
   </head>
   <body>
-    <? var data = LibMailchimpHTML.getData('All Programs!A2:L31', 4); ?>
+    <? var data = LibMailchimpHTML.getData('All Programs!A1:L31'); ?>
     <? if (Array.isArray(data) && data.length) { ?>
     <p>Click the links below to create a draft tweet. Remember to schedule it
     for the next few days. <a
