--- a/tweets.html
+++ b/tweets.html
@@ -4,7 +4,7 @@
     <base target="_top">
   </head>
   <body>
-    <? var data = LibMailchimpHTML.getData('All Programs!A1:L31'); ?>
+    <? var data = LibMailchimpHTML.getData('All Programs!A1:M31'); ?>
     <? if (Array.isArray(data) && data.length) { ?>
     <p>Click the links below to create a draft tweet. Remember to schedule it
     for the next few days. <a
@@ -12,11 +12,11 @@
     See existing Scheduled Tweets</a>.</p>
     <ul>
         <? for (var row in data) { ?>
-            <? var text = "New beta: " + data[row][5];
-               if (data[row][11]) {
-                   text += " by " + data[row][11]
+            <? var text = "New beta: " + data[row][6];
+               if (data[row][12]) {
+                   text += " by " + data[row][12]
                }
-               text += " - " + data[row][6];
+               text += " - " + data[row][7];
             ?>
             <li><a href="https://twitter.com/intent/tweet?text=<?= text; ?>"
                    target="_blank">Tweet <?= row; ?> - <?= data[row][1]; ?></a></li>
