--- a/mailchimp.html
+++ b/mailchimp.html
@@ -10,7 +10,7 @@
     MailChimp editor:</p>
     <textarea id="code" name="code" rows="5" cols="50">
 <? for (var row in data) { ?>
-<h2><a href="<?= data[row][6]; ?>"><?= data[row][1]; ?></a>, from <?= data[row][0]; ?></h2>
+<h2><a href="<?= data[row][6]; ?>"><?= data[row][1]; ?></a><? if (!data[row][1].includes(data[row][0])) { ?>, from <?= data[row][0]; ?><? } ?></h2>
 <p><em><?= data[row][7]; ?></em></p>
 <p><?= data[row][9]; ?>. <?= data[row][10]; ?>. <?= data[row][11]; ?> access.</p>
 <hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
