--- a/mailchimp.html
+++ b/mailchimp.html
@@ -10,9 +10,9 @@
     MailChimp editor:</p>
     <textarea id="code" name="code" rows="5" cols="50">
 <? for (var row in data) { ?>
-<h2><a href="<?= data[row][6].trim(); ?>"><?= data[row][1].trim(); ?></a><? if (!data[row][1].includes(data[row][0])) { ?>, from <?= data[row][0].trim(); ?><? } ?></h2>
-<p><em><?= data[row][7].trim(); ?></em></p>
-<p><?= data[row][9].trim(); ?>. <?= data[row][10].trim(); ?>. <?= data[row][11].trim(); ?> access.</p>
+<h2><a href="<?= data[row]['URL'].trim(); ?>"><?= data[row]['Tool/Product/Project'].trim(); ?></a><? if (!data[row]['Tool/Product/Project'].includes(data[row]['Company/Org'])) { ?>, from <?= data[row]['Company/Org'].trim(); ?><? } ?></h2>
+<p><em><?= data[row]['What is it?'].trim(); ?></em></p>
+<p><?= data[row]['Category'].trim(); ?>. <?= data[row]['Type'].trim(); ?>. <?= data[row]['Access'].trim(); ?> access.</p>
 <hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
 <? } ?>
     </textarea>
