Use updated lib-mailchimphtml with URI.js
https://github.com/consoledotdev/lib-mailchimphtml/commit/07e285c164eb571455a5c9bbef7fbf91fd73baad

--- a/tweets.html
+++ b/tweets.html
@@ -12,7 +12,7 @@
     See existing Scheduled Tweets</a>.</p>
     <ul>
         <? for (var row in data) { ?>
-            <? var text = "New beta: " + data[row]['URL'].trim();
+            <? var text = "New beta: " + data[row]['URL'];
                if (data[row]['Twitter']) {
                    text += " by " + data[row]['Twitter'].trim()
                }
