--- a/mailchimp.html
+++ b/mailchimp.html
@@ -14,7 +14,7 @@
 <? for (var row in data) { ?>
 <h2><a href="<?= data[row]['URL']; ?>"><?= data[row]['Tool/Product/Project'].trim(); ?></a><? if (!data[row]['Tool/Product/Project'].includes(data[row]['Company/Org'])) { ?>, from <?= data[row]['Company/Org'].trim(); ?><? } ?></h2>
 <p><em><?= data[row]['What is it?'].trim(); ?></em></p>
-<p>&bull; <?= data[row]['Category'].toUpperCase(); ?> &bull; <?= data[row]['Type'].toUpperCase(); ?> &bull; <?= data[row]['Access'].toUpperCase(); ?> ACCESS</p>
+<p><small>&bull; <?= data[row]['Category'].toUpperCase(); ?> &bull; <?= data[row]['Type'].toUpperCase(); ?> &bull; <?= data[row]['Access'].toUpperCase(); ?> ACCESS</small></p>
 <hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
 <? } ?>
     </textarea
