--- a/mailchimp.html
+++ b/mailchimp.html
@@ -6,10 +6,14 @@
     <body>
         <? var data = LibMailchimpHTML.getData('All Programs!A1:L100'); ?>
         <? if (Array.isArray(data) && data.length) { ?>
-        <p>
-            Copy the code below into the code section of a text block in the
-            MailChimp editor:
-        </p>
+        <h3>Contents</h3>
+        <p>To be pasted in after interesting tools:</p>
+        <textarea id="code" name="code" rows="5" cols="50">
+<? for (var row in data) { ?>
+<p>🧪 <a href="<?= data[row]['URL']; ?>" style="color: #5269ff"><?= data[row]['Tool/Product/Project'].trim(); ?></a><? if (!data[row]['Tool/Product/Project'].includes(data[row]['Company/Org'])) { ?>, from <?= data[row]['Company/Org'].trim(); ?><? } ?> - <?= data[row]['What is it?'].trim(); ?></p>
+<? } ?>
+</textarea>
+        <h3>Content</h3>
         <textarea id="code" name="code" rows="5" cols="50">
 <? for (var row in data) { ?>
 <h2><a href="<?= data[row]['URL']; ?>"><?= data[row]['Tool/Product/Project'].trim(); ?></a><? if (!data[row]['Tool/Product/Project'].includes(data[row]['Company/Org'])) { ?>, from <?= data[row]['Company/Org'].trim(); ?><? } ?></h2>
@@ -17,8 +21,7 @@
 <p><small>&bull; <?= data[row]['Category'].toUpperCase(); ?> &bull; <?= data[row]['Type'].toUpperCase(); ?> &bull; <?= data[row]['Access'].toUpperCase(); ?> ACCESS</small></p>
 <hr style="border: none; border-top: 2px solid #eaeaea; padding-top: 10px; padding-bottom:0px" />
 <? } ?>
-    </textarea
-        >
+</textarea>
         <? } else { ?>
         <p>No items scheduled.</p>
         <? } ?>
