Extend column range

--- a/mailchimp.html
+++ b/mailchimp.html
@@ -4,7 +4,7 @@
         <base target="_top" />
     </head>
     <body>
-        <? var data = LibMailchimpHTML.getData('All Programs!A1:L100'); ?>
+        <? var data = LibMailchimpHTML.getData('All Programs!A:Q'); ?>
         <? if (Array.isArray(data) && data.length) { ?>
         <h3>Contents</h3>
         <p>To be pasted in after interesting tools:</p>
