--- a/tweets.html
+++ b/tweets.html
@@ -4,7 +4,7 @@
         <base target="_top" />
     </head>
     <body>
-        <? var data = LibMailchimpHTML.getData('All Programs!A1:M100'); ?>
+        <? var data = LibMailchimpHTML.getData('All Programs!A:Q'); ?>
         <? if (Array.isArray(data) && data.length) { ?>
         <p>
             Click the links below to create a draft tweet. Remember to schedule
