--- a/mailchimp.html
+++ b/mailchimp.html
@@ -34,7 +34,11 @@
 <h4><?= data[row]['What is it?'].trim(); ?></h4>
 <span style="font-family:courier new,courier,lucida sans typewriter,lucida typewriter,monospace"><?= data[row]['Category']; ?>, <?= data[row]['Type']; ?>, <?= data[row]['Access']; ?> Access</span>
 
-<hr style="border: none; border-top: none; padding-top: 6px; padding-bottom: 12px;" />
+<? if (row < (data.length - 1)) { ?>
+    <hr style="border: none; border-top: none; padding-top: 6px;" />
+<? } else { ?> 
+    <hr style="border: none; border-top: none; padding-top: 6px; padding-bottom: 12px;" />
+<? } ?>
 <? } ?>
 </textarea>
     <? } else { ?>
